--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,6 +18,12 @@
         <item>Third content</item>
         <item>Some other content</item>
     </string-array>
+    <string-array name="importances">
+        <item>1</item>
+        <item>0</item>
+        <item>0</item>
+        <item>1</item>
+    </string-array>
     <string-array name="dates">
         <item>2020/04/20</item>
         <item>2021/01/06</item>
