--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal">
 
     <fragment
+        android:id="@+id/notes"
         android:name="com.example.notes.NotesFragment"
         android:layout_width="@dimen/zero_dp"
         android:layout_height="match_parent"
