--- a/app/src/main/res/layout/activity_data_picker.xml
+++ b/app/src/main/res/layout/activity_data_picker.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".DataPickerActivity">
 
+    <DatePicker
+        android:id="@+id/date_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_ok_date_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@android:string/ok"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/date_picker"
+        />
+    <Button
+        android:layout_marginStart="@dimen/button_margin_start"
+        android:text="@android:string/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/button_ok_date_picker"
+        app:layout_constraintTop_toTopOf="@id/button_ok_date_picker"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
