--- a/app/src/main/res/layout/activity_data_picker.xml
+++ b/app/src/main/res/layout/activity_data_picker.xml
@@ -24,6 +24,7 @@
         app:layout_constraintTop_toBottomOf="@id/date_picker"
         />
     <Button
+        android:id="@+id/button_cancel_date_picker"
         android:layout_marginStart="@dimen/button_margin_start"
         android:text="@android:string/cancel"
         android:layout_width="wrap_content"
