--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -13,7 +13,7 @@
 
     <FrameLayout
         android:id="@+id/single_note"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/zero_dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
