--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <fragment
-        android:name="com.example.notes.NotesFragment"
+    <FrameLayout
+        android:id="@+id/notes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/notes" />
+        android:layout_height="match_parent" />
 </FrameLayout>
