--- a/app/src/main/res/layout/fragment_data_picker.xml
+++ b/app/src/main/res/layout/fragment_data_picker.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DataPickerActivity">
+    android:layout_height="match_parent">
 
     <DatePicker
         android:id="@+id/date_picker"
