--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="zero_dp">0dp</dimen>
     <dimen name="button_margin_start">5dp</dimen>
     <dimen name="nav_header_height">200dp</dimen>
+    <dimen name="about_textsize">24sp</dimen>
 </resources>
