editing nav_header_main

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="button_margin_start">5dp</dimen>
     <dimen name="nav_header_height">200dp</dimen>
     <dimen name="about_textsize">24sp</dimen>
+    <dimen name="padding_top">5dp</dimen>
+    <dimen name="user_name_size">30sp</dimen>
 </resources>
