--- a/app/src/main/res/menu/menu_fragment_notes.xml
+++ b/app/src/main/res/menu/menu_fragment_notes.xml
@@ -4,6 +4,6 @@
         android:id="@+id/add_note"
         android:title="@string/add_note" />
     <item
-        android:id="@+id/sort_notes"
-        android:title="@string/sort_notes" />
+        android:id="@+id/clear_notes"
+        android:title="@string/clear_notes" />
 </menu>
