--- a/app/src/main/res/layout/fragment_dialog.xml
+++ b/app/src/main/res/layout/fragment_dialog.xml
@@ -20,6 +20,7 @@
             android:id="@+id/dialog_button_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/button_margin"
             android:layout_weight="1"
             android:text="@android:string/ok" />
 
@@ -27,6 +28,7 @@
             android:id="@+id/dialog_button_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/button_margin"
             android:layout_weight="1"
             android:text="@android:string/cancel" />
     </LinearLayout>
